fixed bug for index.html the values didn't align in center for smaller devicess

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,13 @@ margin-bottom:25px;
     margin-top:0px;
 }
 /*--------------------------------- Main Section*/
+ .main-section-right-adjust{
+     height:300px;
+ }
+.center-small-devices{
+    width: 173px;
+    margin:0 auto;
+}
 .main-section{
     padding: 20px 20px;
 }
@@ -154,6 +161,13 @@ margin-bottom:25px;
    margin-bottom: 15px;
    margin-top:2px;
    width:auto;
+}
+.centering {
+width:173px;
+text-align:center;
+margin-bottom:1px;
+margin-top:8px;
+
 }
 .main-section-left {
  padding-left:30px;
@@ -499,8 +513,12 @@ border-radius:6px;
         margin:0 auto;
         align-items: center;
     }
+    
     .main-section-left p {
         margin-left:-15px;
+    }
+    .main-section-right {
+        padding:0;
     }
 }
 
@@ -509,7 +527,7 @@ border-radius:6px;
         Display:block;
     }
     .main-section-right div {
-      display: inline-block;
+     /* display: inline-block;*/
     }
     .main-section-right i {
         display:inline-block;
@@ -526,8 +544,10 @@ border-radius:6px;
 
 @media (min-width:576px) {
     footer {
-       position:fixed;
+      position:fixed;
         bottom:0;
+        margin-top:20px;
+       
    }
 }
 
@@ -536,7 +556,6 @@ border-radius:6px;
     width:100%;
 }
 }
-
 
 
 
